/*
 * $Id: ChangeLog,v 1.1401 2003/09/03 00:33:59 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-09-03 07:30 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/rtl/inkey.c
   * source/rtl/gtstd/gtstd.c
     ! Minor modifications on platform definitions due to recent changes.

2003-09-02 17:31 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbrddcdx.h
  * source/rdd/dbfcdx/dbfcdx1.h
    + Added missing reset of #pragma pack() for MSVC.

  * source/rdd/dbcmd.c
  * source/rdd/dbf1.c
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/rdd/dbfntx/dbfntx1.c
    - Removed unneeded BOOL bMathName from rddMoveFields() and replaced with if( pFields ).
    ! Fixed GPF in GetTheOtherArea() resulting from attemting to convert case of static buffer (field name).
    * Many Formating fixes.

  * source/vm/errorapi.c
    ! Fixed GPF trap in hb_errPutFileName() when file name is NULL.

2003-09-03 05:45 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/rtl/inkey.c
   * source/rtl/gtwin/gtwin.c
     ! When CapsLock is on, numeric keys ( eg. 1, 2 ) does not echo
       the correct key-pressed value. Fixed.

     /*
     This is a work around for HB_OS_WIN_32_USED environment. If others
     have a better solution, improvement is appreciated.
     */

2003-09-01 22:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbcmd.c
  * source/rdd/dbf0.prg
  * source/rdd/rddsys.prg
  * source/rdd/dbfntx/dbfntx0.prg
  * source/rdd/nulsys/nulsys.prg
  * source/rtl/win32ole.prg
  * source/vm/hvm.c
    ! Fixed initilaization of DBF, DBFNTX, DBFCDX and Initialize_Ole, to take place before INIT PORCEDUREs are called.

2003-09-02 01:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  *source/rtl/set.c
    ! minor fix

2003-09-31 14:24 UTC+0100 Patrick Mast <patrick@winfakt.com>
  * source/rtl/filesys.c